--- a/colmar.html
+++ b/colmar.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
 	<title>Colmar Academy</title>
@@ -158,8 +157,7 @@
   
   <!-- Footer -->
 	<footer>
-		<span class="copyright"> 2016 Colmar Academy. All rights reserved</span> <a href="#">Terms</a> <a href="#">Privacy</a>
+		<span class="copyright">© 2016 Colmar Academy. All rights reserved</span> <a href="#">Terms</a> <a href="#">Privacy</a>
 	</footer>
 </body>
-
 </html>
